# brainflow

./: CMakeLists.txt
src/board_controller/: board_controller.cpp  build.cmake
tools/: build.py
